# serializer version: 1
# name: test_devices[mock_conversation_subentry_data0]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'labels': set({
    }),
    'manufacturer': 'OpenAI',
    'model': 'gpt-4o-mini',
    'model_id': None,
    'name': 'OpenAI Conversation',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[mock_conversation_subentry_data1]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'labels': set({
    }),
    'manufacturer': 'OpenAI',
    'model': 'gpt-1o',
    'model_id': None,
    'name': 'OpenAI Conversation',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
